--- a/mockupwebsite/index.html
+++ b/mockupwebsite/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="utf-8">
-  <title>Mockup Website UMKM per Sektor Ekonomi | Assistenku</title>
+  <title>Mockup Website UMKM dan Bisnis per Sektor Ekonomi | Assistenku</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Pilih mockup website berdasarkan 17 sektor ekonomi Indonesia. Tampilan rapi, profesional, siap disesuaikan.">
 
@@ -48,9 +48,9 @@
       </div>
 
       <ul class="hero-points">
-        <li>Rapi, modern, mobile-first</li>
-        <li>Aksen warna mengikuti nuansa 17 sektor</li>
-        <li>Ringan untuk hosting (static)</li>
+        <li>Rapi, modern</li>
+        <li>Aksen warna mengikuti pilihan dan identitas warna usaha</li>
+        <li>Ringan untuk tampilan ios dan android</li>
       </ul>
     </div>
 
