--- a/mockupwebsite/index.html
+++ b/mockupwebsite/index.html
@@ -38,7 +38,7 @@
     <div class="hero-copy">
       <h1>Pilih Mockup Website<br>berdasarkan 17 Sektor Ekonomi</h1>
       <p>
-        Ini halaman penawaran pilihan tampilan. Setelah Anda pilih sektor, kami sesuaikan konten,
+        Ini halaman penawaran pilihan tampilan.<br>Setelah Anda pilih sektor, kami sesuaikan konten,
         warna, dan kebutuhan fitur sesuai bisnis Anda.
       </p>
 
