--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 </div>
   
 <footer>
-  © 2025 <strong>PT Assistenku Solusi Indonesia</strong>
+  <strong>PT Assistenku Solusi Indonesia</strong>
 </footer>
 
 <script src="/script.js"></script>
