--- a/karir.html
+++ b/karir.html
@@ -292,7 +292,7 @@
 
 
 <footer>
-  © 2025 <strong>PT Assistenku Solusi Indonesia</strong>
+  <strong>PT Assistenku Solusi Indonesia</strong>
 </footer>
 <script src="/script.js"></script>
   <div id="pwaInstallBanner" class="pwa-install" style="display:none;">
