--- a/kontak.html
+++ b/kontak.html
@@ -112,7 +112,7 @@
 </section>
 
 <footer>
-  © 2025 <strong>PT Assistenku Solusi Indonesia</strong>
+  <strong>PT Assistenku Solusi Indonesia</strong>
 </footer>
 <script src="/script.js"></script>
   <div id="pwaInstallBanner" class="pwa-install" style="display:none;">
