--- a/dapurputri/dapurputri.html
+++ b/dapurputri/dapurputri.html
@@ -11,14 +11,18 @@
 
   <main class="container">
     <header class="header">
-      <div class="brand">
-        <div class="brand-badge">DP</div>
-        <div class="brand-text">
-          <h1>Paket Catering Harian</h1>
-          <p>Menu rumahan higienis, cocok untuk kantor & keluarga</p>
-        </div>
-      </div>
-    </header>
+  <div class="brand">
+    <img 
+      src="/dapurputri/assets/dapurputrilogo.png" 
+      alt="Logo Dapur Putri" 
+      class="brand-logo"
+    >
+    <div class="brand-text">
+      <h1>Paket Catering Harian</h1>
+      <p>Menu rumahan higienis, cocok untuk kantor & keluarga</p>
+    </div>
+  </div>
+</header>
 
     <section class="grid" id="menuGrid" aria-label="Daftar menu 7 hari">
       <!-- Cards di-render oleh JS -->
