--- a/dapurputri/dapurputri.html
+++ b/dapurputri/dapurputri.html
@@ -41,7 +41,7 @@
       <div class="hero-grid">
         <div class="hero-card">
           <div class="kicker"><span class="dot"></span><span>Rasa rumahan, presentasi premium</span></div>
-          <h1>Dapur Putri — Catering &amp; Homemade yang tampil “kelas rapi”.</h1>
+          <h1>Dapur Putri — Catering Homemade</h1>
           <p class="subtitle">
             Hidangan hangat dengan tampilan rapi, porsi jelas, dan rasa konsisten.
             Cocok untuk makan harian, keluarga, maupun kebutuhan acara.
@@ -141,6 +141,12 @@
       </p>
     </div>
   </section>
+
+  <div class="note">
+  <strong>Ketentuan Ongkos Kirim</strong><br>
+  Harga menu <strong>tidak termasuk ongkos kirim</strong>. Ongkir mengikuti tarif aplikasi (Grab/Gojek) atau ketentuan antar Dapur Putri.
+  Nominal ongkir dikonfirmasi sebelum pengiriman.
+  </div>
 
   <!-- Menu -->
   <section id="menu">
